Completed basic portfolio site
+ added picture of self
+ added all three major projects
+ updated resume pdf

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -187,7 +187,6 @@
 @media (min-width: 992px) {
   .projects-section .featured-text {
     padding: 0 0 0 2rem;
-    border-left: 0.5rem solid #64a19d;
   }
 }
 
@@ -205,6 +204,11 @@
     border-width: .25rem;
     width: 30%;
   }
+}
+
+.main-project {
+  -webkit-box-shadow: 0 0 10px 0 rgba(50, 50, 50, 0.75);
+  box-shadow: 0 0 10px 0 rgba(50, 50, 50, 0.75);
 }
 
 .signup-section {
