--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,10 +1,12 @@
+$black75: rgba(0, 0, 0, .75);
+
 .projects-section {
   padding: 10rem 0;
   .featured-text {
     padding: 2rem;
     @media (min-width: 992px) {
       padding: 0 0 0 2rem;
-      border-left: 0.5rem solid $primary;
+      // border-left: 0.5rem solid $primary;
     }
   }
   .project-text {
@@ -19,4 +21,9 @@
       }
     }
   }
+}
+
+.main-project {
+  // box-shadow: 1px 1px 3px 0 $black75;
+  box-shadow: 0 0 10px 0 rgba(50, 50, 50, 0.75);
 }
